--- a/1-node-farm/package.json
+++ b/1-node-farm/package.json
@@ -4,8 +4,11 @@
   "description": "Learning node.js ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "Danier Javid",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "slugify": "^1.3.5"
+  }
 }
