--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3216
 USER=danier
 PASSWORD=123456
+DATABASE=mongodb+srv://natUser:<PASSWORD>@natclus-lzvwq.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=qZ0dqUnJpEZ69DKQ
