--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -5,3 +5,5 @@ PASSWORD=123456
 DATABASE=mongodb+srv://natUser:<PASSWORD>@natclus-lzvwq.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=qZ0dqUnJpEZ69DKQ
+JWT_SECRET=djmccemcdmcmmmpmrlojcmfaocticrrn
+JWT_EXPIRES_IN=90d
