natours project - password reset functionality reset token | sending emails with nodemailer

--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -7,3 +7,9 @@ DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=qZ0dqUnJpEZ69DKQ
 JWT_SECRET=djmccemcdmcmmmpmrlojcmfaocticrrn
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME = 6adea28d2aca5d
+EMAIL_PASSWORD = b46e185e9f747c
+EMAIL_HOST = smtp.mailtrap.io
+EMAIL_PORT = 25
+
