--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -7,6 +7,7 @@ DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=qZ0dqUnJpEZ69DKQ
 JWT_SECRET=djmccemcdmcmmmpmrlojcmfaocticrrn
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME = 6adea28d2aca5d
 EMAIL_PASSWORD = b46e185e9f747c
