--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3216
 USER=danier
 PASSWORD=123456
@@ -14,4 +14,9 @@ EMAIL_PASSWORD = b46e185e9f747c
 EMAIL_HOST = smtp.mailtrap.io
 EMAIL_PORT = 25
 EMAIL_FROM = danij@gmail.com
+
+SENDGRID_USERNAME = apikey
+SENDGRID_PASSWORD= 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
+
+
 
