prepared app for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,11 @@
 
 # dependencies
 node_modules/
-1-node-farm/node_modules
-4-natours/node_modules
-3-asynchronous-JS/node_modules
-4-natours/config.env
+4-natours/.cache/
+1-node-farm/node_modules/
+4-natours/node_modules/
+3-asynchronous-JS/node_modules/
+4-natours/*.env
 
 # profiling files
 chrome-profiler-events.json
